# edres

./: .gitignore  Cargo.toml  DEV.md  README.md  run_tests
.github/workflows/: rust.yml
edres/: Cargo.toml
edres/src/: files.rs  lib.rs
edres/tests/: integration.rs
edres/tests/data/: enum.yaml  struct.yaml
edres/tests/data/files/: alpha.yaml  beta.yaml
edres_core/: Cargo.toml
edres_core/src/: codegen.rs  enums.rs  error.rs  format.rs  gen.rs  generation.rs  lib.rs  load_fns.rs  options.rs  structs.rs  validation.rs  value.rs
edres_core/src/parsing/: json.rs  mod.rs  ron.rs  toml.rs  yaml.rs
edres_core/tests/: gen_from_files.rs  number_size_tests.rs
edres_core/tests/yamls/: file_a.yaml  file_b.yaml
edres_macros/: Cargo.toml
edres_macros/src/: lib.rs
old_test_edres/: build.rs
old_test_edres/src/config/: files_enum.rs  json.rs  json_enum.rs  ron.rs  ron_enum.rs  toml.rs  toml_enum.rs  yaml.rs  yaml_enum.rs
old_test_edres/tests/config/: dependent.rs  dynamic.rs  static_config.rs
scripts/: citest  dev  fmt  test  watch
src/: enums.rs  error.rs  files.rs  files_enum.rs  gen.rs  json_parsing.rs  lib.rs  options.rs  ron_parsing.rs  structs.rs  toml_parsing.rs  validation.rs  value.rs  yaml_parsing.rs
src/parsing/: mod.rs  ron.rs  yaml.rs
test_edres/: Cargo.toml  README.md  build.rs
test_edres/data/json/: map.json  struct.json
test_edres/data/json/files/: file_a.json  file_b.json
test_edres/data/toml/: map.toml  struct.toml
test_edres/data/toml/files/: file_a.toml  file_b.toml
test_edres/data/yaml/: map.yaml  struct.yaml
test_edres/data/yaml/files/: file_a.yaml  file_b.yaml
test_edres/src/: gen.rs  lib.rs
test_edres/src/autogen/: json.rs  toml.rs  yaml.rs
tests/: number_size_tests.rs
