[package]
name = "edres"
version = "0.5.0"
authors = ["Vi <violet@hey.com>"]
edition = "2018"
description = "Generate struct and enum definitions from compatible data files."
homepage = "https://github.com/mistodon/edres"
repository = "https://github.com/mistodon/edres"
readme = "README.md"
keywords = ["build", "config", "parsing", "generator"]
categories = ["config", "parsing"]
license = "CC0-1.0"

[badges]
travis-ci = { repository = "mistodon/edres", branch = "master" }

[package.metadata.docs.rs]
all-features = true

[features]
default = ["toml-parsing"]
json-parsing = ["serde_json"]
ron-parsing = ["ron"]
toml-parsing = ["toml"]
yaml-parsing = ["serde_yaml"]
experimental-files-enum = ["case"]

[dependencies]
case = { version = "~1.0.0", optional = true }
linear-map = { version = "~1.2.0", features = ["serde_impl"] }
quote = "~1.0.9"
ron = { version = "~0.3.0", optional = true }
serde_json = { version = "~1.0.64", optional = true }
serde_yaml = { version = "~0.8.17", optional = true }
thiserror = "~1.0.24"
toml = { version = "~0.5.8", optional = true }
