[package]
name = "edres"
version = "0.7.1"
authors = ["Vi <violet@hey.com>"]
edition = "2024"
description = "Generate struct and enum definitions from data files."
homepage = "https://github.com/mistodon/edres"
repository = "https://github.com/mistodon/edres"
readme = "../README.md"
keywords = ["build", "config", "parsing", "generator"]
categories = ["config", "parsing"]
license = "CC0-1.0"

[package.metadata.docs.rs]
all-features = true

[features]
default = ["toml"]
json = ["edres_core/json"]
toml = ["edres_core/toml"]
yaml = ["edres_core/yaml"]

[dependencies]
edres_core = { version = "=0.7.1", path = "../edres_core" }

[dev-dependencies]
proc-macro2 = "1.0"
quote = "1.0"
