[package]
name = "edres_core"
version = "0.6.0"
edition = "2021"

[features]
default = []
json-parsing = ["serde_json"]
ron-parsing = ["ron"]
toml-parsing = ["toml"]
yaml-parsing = ["serde_yaml"]

[dependencies]
case = "~1.0.0"
ignore = "~0.4.18"
indexmap = { version = "~1.7.0", features = ["serde-1"] }
linear-map = { version = "~1.2.0", features = ["serde_impl"] }
proc-macro2 = "~1.0.32"
quote = "~1.0.10"
ron = { version = "~0.7.0", features = ["indexmap"], optional = true }
serde_json = { version = "~1.0.68", features = ["preserve_order"], optional = true }
serde_yaml = { version = "~0.8.21", optional = true }
thiserror = "~1.0.30"
toml = { version = "~0.5.8", features = ["preserve_order"], optional = true }

[dev-dependencies]
pretty_assertions = "~1.0.0"
