[package]
name = "edres_core"
version = "0.6.0"
edition = "2021"

[features]
default = []
json-parsing = ["serde_json"]
toml-parsing = ["toml"]
yaml-parsing = ["serde_yaml"]

[dependencies]
case = "1.0"
ignore = "0.4"
indexmap = { version = "1.9", features = ["serde"] }
proc-macro2 = "1.0"
quote = "1.0"
serde_json = { version = "1.0", features = ["preserve_order"], optional = true }
serde_yaml = { version = "0.9", optional = true }
thiserror = "1.0"
toml = { version = "0.5", features = ["preserve_order"], optional = true }

[dev-dependencies]
pretty_assertions = "1.3"
