[package]
name = "edres_macros"
version = "0.7.0"
edition = "2021"

[lib]
proc-macro = true

[features]
default = []
json = ["edres_core/json"]
toml = ["edres_core/toml"]
yaml = ["edres_core/yaml"]

[dependencies]
edres_core = { version="=0.7.0", path = "../edres_core" }
syn = { version="1.0", features=["full"] }
quote = "1.0"
