[package]
name = "test_edres"
version = "0.1.0"
edition = "2021"

[dependencies]
edres = { path = "..", features = ["json-parsing", "ron-parsing", "toml-parsing", "yaml-parsing", "proc-macros"] }
ron = "*"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
serde_yaml = "*"
toml = "*"

[build-dependencies]
edres = { path = "..", features = ["json-parsing", "ron-parsing", "toml-parsing", "yaml-parsing"] }
